--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -14,6 +14,13 @@
     }
 }
 
+.colored-text{
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
 .heading-tertiary {
     font-size: $default-font-size;
     font-weight: 700;
