--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -12,6 +12,8 @@
 @import "layout/grid";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature-box";
 
 
 
