--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -12,6 +12,10 @@ $color-tertiary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+// dark
+$color-grey-dark : #777;
+$color-grey-dark-1: #999;
+$color-grey-dark-2: #333;
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
