--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,6 +1,6 @@
 
 .btn {
-    &:link,&:visited{
+    &:link,&:visited,&{
         text-transform: uppercase;
         text-decoration: none;
         padding: 1.5rem 4rem;
@@ -8,8 +8,11 @@
         border-radius: 10rem;
         transition: all .2s;
         font-size: $default-font-size;
+
+        border: none;
+        cursor: pointer;
     }
-    &:hover{
+    &:hover,&:active{
         transform: translateY(-3px);
         box-shadow: 0 10px 20px rgba($color-black,0.2);
 
