--- a/Natours/sass/pages/_homes.scss
+++ b/Natours/sass/pages/_homes.scss
@@ -24,5 +24,28 @@
 
 .section-stories{
     padding: 15rem 0;
-    background-color: $color-grey-light-1;
+    background-color: rgba($color-grey-light-1,0.2);
+    position: relative;
+}
+
+.section-book{
+    padding: 15rem 0;
+    background-image: linear-gradient(to right , rgba($color-primary, 0.80), rgba($color-primary-dark, 0.8));
+}
+
+.book{
+    background-image: linear-gradient(105deg, 
+    rgba($color-white, 0.9)0%, 
+    rgba($color-white, 0.9)50%, 
+    transparent 50%),url(../img/nat-10.jpg);
+    background-size: cover;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+    height: 50rem;
+    width: 90%;
+
+    &__form{
+        width: 50%;
+        padding: 6rem;
+    }
 }
