lec finished lecture 49 next is 50

--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -5,3 +5,11 @@
         clear: both;
     }
 }
+
+
+@mixin centerhorizontal{
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translateX(-50%);
+}
