--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $color-grey-light-2: #eee;
 $color-grey-dark : #777;
 $color-grey-dark-1: #999;
 $color-grey-dark-2: #333;
+$color-grey-dark-3: #444;
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
