--- a/Natours/sass/layout/_navigation.scss
+++ b/Natours/sass/layout/_navigation.scss
@@ -12,7 +12,7 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light,$color-primary-dark);
         z-index: 1000;
-        transform: scale(80);
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
     }
 
     &__button{
@@ -24,19 +24,25 @@
         top: 6rem;
         right: 6rem;
         z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-black,.1);
+        text-align: center;
+        cursor: pointer;
     }
 
     &__nav{ 
         height: 100vh;
-        width: 100vw;
         position: fixed;
         top: 0;
         right: 0;
         z-index: 1500;
+        opacity: 0;
+        width: 0;
+        transition: opacity 0.8s, width 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
 
     &__list{
+        width: 100%;
         position: absolute;
         @include centerhorizontal;
     }
@@ -46,7 +52,7 @@
     }
 
     &__link{
-        &:link,&:visited{
+        &:link,&:active{
             display: inline-block;
             font-size: 3rem;
             font-weight: 300;
@@ -69,5 +75,49 @@
             color: $color-primary;
             transform: translateX(1rem); 
         }
+    }
+
+    &__checkbox:checked ~ &__background{
+        transform: scale(80);
+    }
+    &__checkbox:checked ~ &__nav{
+        opacity: 1;
+        width: 50%;
+    }
+
+    //ICON
+    &__icon{
+        position: relative;
+        margin-top: 3rem;
+        &,&::before,&::after{
+            width: 3rem;
+            height: 2px;
+            background-color: $color-grey-dark-3;
+            display: inline-block;
+        }
+        &::before,&::after{
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: all .2s;
+        }
+        &::before{
+            top: -.8rem;
+        }   
+        &::after{
+            top: .8rem;
+        }
+    }
+    &__checkbox:checked + &__button &__icon{
+        background-color: transparent;
+    }
+
+    &__checkbox:checked + &__button &__icon::before{
+        top: 0;
+        transform: rotate(45deg);
+    }
+    &__checkbox:checked + &__button &__icon::after{
+        top: 0;
+        transform: rotate(-45deg);
     }
 }
