--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -247,7 +247,7 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
-  transform: scale(80); }
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
 
 .navigation__button {
   background-color: #fff;
@@ -257,27 +257,33 @@ body {
   position: fixed;
   top: 6rem;
   right: 6rem;
-  z-index: 2000; }
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
 
 .navigation__nav {
   height: 100vh;
-  width: 100vw;
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1500; }
+  z-index: 1500;
+  opacity: 0;
+  width: 0;
+  transition: opacity 0.8s, width 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
 .navigation__list {
+  width: 100%;
   position: absolute;
   position: absolute;
-  top: 35%;
-  left: 50%;
+  top: 40%;
+  left: 40%;
   transform: translateX(-50%); }
 
 .navigation__item {
   margin: 1rem; }
 
-.navigation__link:link, .navigation__link:visited {
+.navigation__link:link, .navigation__link:active {
   display: inline-block;
   font-size: 3rem;
   font-weight: 300;
@@ -289,7 +295,7 @@ body {
   background-size: 220%;
   transition: all .4s;
   margin-bottom: 2rem; }
-  .navigation__link:link span, .navigation__link:visited span {
+  .navigation__link:link span, .navigation__link:active span {
     margin-right: 1rem;
     display: inline-block; }
 
@@ -297,6 +303,42 @@ body {
   background-position: 100%;
   color: #55c57a;
   transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 50%; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background-color: #444;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all .2s; }
+  .navigation__icon::before {
+    top: -.8rem; }
+  .navigation__icon::after {
+    top: .8rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  top: 0;
+  transform: rotate(45deg); }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  top: 0;
+  transform: rotate(-45deg); }
 
 .btn:link, .btn:visited, .btn {
   text-transform: uppercase;
