--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -13,3 +13,44 @@
     left: 40%;
     transform: translateX(-50%);
 }
+
+// media query manager
+
+// 0-600 mobile
+
+// 600-900 tablet portrait
+
+// 900-1200 tablet landscape
+
+// 1200-1800 normal desktop
+
+// 1800- big screen
+
+@mixin respond-phone{
+    @media (max-width: 600px){
+        @content;
+    }
+}
+
+@mixin respond($breakpoint){
+    @if $breakpoint == phone{
+        @media (max-width: 600px){
+            @content;
+        }
+    }
+    @if $breakpoint == tab-port{
+        @media (max-width: 900px){
+            @content;
+        }
+    }
+    @if $breakpoint == tab-land{
+        @media (max-width: 1200px){
+            @content;
+        }
+    }
+    @if $breakpoint == big-desktop{
+        @media (min-width: 1800px){
+            @content;
+        }
+    }
+}
