--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -1,3 +1,41 @@
+.heading-primary{
+    color: $color-white;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+    margin-bottom: 6rem;
+    
+    &--main{
+        // display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        // media query manager
+        @include respond(tab-port){
+            font-size: 4rem;
+            letter-spacing: 2.5rem;
+        }
+        @include respond(phone){
+            font-size: 3rem;
+            letter-spacing: 1.5rem;
+        }
+    }
+    &--sub{
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.75rem;
+        animation: moveInRight 1s ease-out;
+        @include respond(tab-port){
+            font-size: 1.5rem;
+            letter-spacing: 1rem;
+        }
+        @include respond(phone){
+            font-size: 1.25rem;
+            letter-spacing: .75rem;
+        }
+    }
+}
+
 .heading-secondary {
     font-size: 3.5rem;
     text-transform: uppercase;
@@ -8,6 +46,12 @@
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
     &:hover{
         transform:skewY(2deg) skewX(15deg) scale(1.1);
         text-shadow: .5rem 1rem 2rem rgba($color: $color-black, $alpha: 0.8)
